Closed Bug 1440506 Opened 8 years ago Closed 4 years ago

Dropdowns probably should be preserved among reframe

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

RESOLVED FIXED
99 Branch
Webcompat Priority revisit
Tracking Status
firefox60 --- wontfix
firefox99 --- fixed

People

(Reporter: xidorn, Assigned: emilio)

References

(Blocks 1 open bug)

Details

(Whiteboard: [layout:backlog:quality])

Attachments

(2 files)

Attached file testcase
Steps to reproduce: 1. open the testcase 2. click the combo box to open the dropdown 3. wait for several seconds Expected result: The dropdown never disappears automatically as far as you don't move the focus Actual result: It disappears when position value change. (Chrome and Edge seem to give the expected result for this testcase.)
See Also: → 1440258
[Triage 2018/03/23 - P3]
Priority: -- → P3
Blocks: 1448813
So this happens because this runnable: https://searchfox.org/mozilla-central/rev/49cc27555d5b7ed2eb06baf156693dd578daa06f/layout/forms/nsListControlFrame.cpp#159 Hides the popup unconditionally even if it was reframed, unlike nsHideViewer does, for example: https://searchfox.org/mozilla-central/rev/49cc27555d5b7ed2eb06baf156693dd578daa06f/layout/forms/nsListControlFrame.cpp#159 Content-select would also fix this of course.
Depends on: content-select
Flags: needinfo?(emilio)
Assignee: nobody → emilio
This is way more painful than what I thought, there's all sorts of state along nsComboboxControlFrame and nsListControlFrame that would really need to be moved to HTMLSelectElement... I'll take it if I have the time, but not this week...
Assignee: emilio → nobody
Flags: needinfo?(emilio)
Webcompat Priority: --- → ?
Whiteboard: [layout:backlog]
See Also: → 1555497
Whiteboard: [layout:backlog] → [layout:backlog:quality]
Blocks: 1608175
Webcompat Priority: ? → revisit
See Also: → 1740439
See Also: → 1740609
See Also: → 1740474
Flags: needinfo?(emilio)

(ni=emilio to try out an idea he has here, applying a similar approach to our strategy for iframe-preservation here.)

Assignee: nobody → emilio
Attachment #9263796 - Attachment description: WIP: Bug 1440506 - Do not destroy dropdowns on reframe. → Bug 1440506 - Do not destroy dropdowns on reframe. r=dholbert
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0ce3566b9e52 Do not destroy dropdowns on reframe. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Blocks: 1305017
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: